# NseIndiaApi

./: .buildinfo  .gitignore  README.md  api.html  fetch_historical_index_data.html  genindex.html  index.html  index_categories.html  listEquityStocksByIndex.html  objects.inv  pyproject.toml  search.html  searchindex.js  usage.html
.doctrees/: api.doctree  environment.pickle  fetch_historical_index_data.doctree  index.doctree  index_categories.doctree  listEquityStocksByIndex.doctree  usage.doctree
.github/workflows/: publish-to-pypi.yml  sphinx.yml
_sources/: api.rst.txt  fetch_historical_index_data.rst.txt  index.rst.txt  listEquityStocksByIndex.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  index_categories.rst  listEquityStocksByIndex.rst  usage.rst
src/: __init__.py
src/nse/: NSE.py  __init__.py
src/samples/: actions.json  advanceDecline.json  announcements.json  annual_reports.json  blockDeals.json  boardMeetings.json  bulkdeals-block_deals.json  bulkdeals-bulk_deals.json  bulkdeals-short_selling.json  bulkdeals.json  circulars.json  compileOptionChain.json  equityMetaInfo.json  equityQuote.json  fetch_equity_historical_data.json  fetch_historical_fno_data.json  fetch_historical_index_data.json  fetch_historical_vix_data.json  fetch_symbol_data.json  financial_results.json  fnoLots.json  gainers.json  holidays.json  listCurrentIPO.json  listEquityStocksByIndex.json  listEtf.json  listFnoStocks.json  listIndexStocks.json  listIndices.json  listPastIPO.json  listSgb.json  listSme.json  listUpcomingIPO.json  liveVolumeGainers.json  lookup.json  losers.json  optionChain.json  quote-trade_info.json  quote.json  results_comparison.json  (+2 more)
tests/: Dockerfile  context.py  test_nse_cookies.py  test_nse_e2e.py  test_nse_financial_results.py  test_nse_h1.py  test_nse_h1_reports.py  test_nse_h2.py  test_nse_h2_reports.py  test_nse_option_chain.py
web/: main.py
web/api/: hello.py
web/core/: config.py
